--- a/index.html
+++ b/index.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+	<meta charset="UTF-8">
+	<title>Dice Game</title>
+	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster">
+	
 </head>
 <body>
-$END$
+	
+	<div class="container">
+		<h1 id="titleHeading">Refresh Me</h1>
+		
+		<div class="dice">
+			<p>Player 1</p>
+			<img id="img1" class="img1" src="images/dice6.png">
+		</div>
+		
+		<div class="dice">
+			<p>Player 2</p>
+			<img id="img2" class="img2" src="images/dice6.png">
+		</div>
+	
+	</div>
+	
+	<script src="index.js"></script>
+	
 </body>
+
+<footer>
+
+</footer>
+
 </html>
